--- a/packages/flutter_analysis_options/pubspec.yaml
+++ b/packages/flutter_analysis_options/pubspec.yaml
@@ -7,6 +7,6 @@ version: 1.0.0
 
 environment:
   # The pub client defaults to an <2.0.0 sdk constraint which we need to explicitly overwrite.
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 # PUBSPEC CHECKSUM: 0000
