--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   # To update these, use "flutter update-packages --force-upgrade".
   collection: 1.14.11
   flutter_analysis_options:
-    path: ../flutter_analysis_options
+    sdk: flutter
   meta: 1.1.6
   typed_data: 1.1.6
   vector_math: 2.0.8
