--- a/packages/flutter_analysis_options/pubspec.yaml
+++ b/packages/flutter_analysis_options/pubspec.yaml
@@ -4,6 +4,7 @@ description: The base and strict analysis options for the Flutter project.
 homepage: http://flutter.io
 
 version: 1.0.0
+publish_to: none
 
 environment:
   # The pub client defaults to an <2.0.0 sdk constraint which we need to explicitly overwrite.
