--- a/.ci.yaml
+++ b/.ci.yaml
@@ -4192,6 +4192,7 @@ targets:
 
   - name: Windows_android channels_integration_test_win
     recipe: devicelab/devicelab_drone
+    bringup: true # Flaky: https://github.com/flutter/flutter/issues/107680
     presubmit: false
     timeout: 60
     properties:
