--- a/packages/flutter/lib/analysis_options.yaml
+++ b/packages/flutter/lib/analysis_options.yaml
@@ -4,3 +4,4 @@ linter:
   rules:
     # diagnostic_describe_all_properties: true # blocked on https://github.com/dart-lang/sdk/issues/47418
     prefer_relative_imports: false # doesn't really work when you have subpackages like we do here
+    export_public_api_types: true
