--- a/.ci.yaml
+++ b/.ci.yaml
@@ -164,7 +164,7 @@ targets:
         [
           {"dependency": "android_sdk", "version": "version:32v1"},
           {"dependency": "open_jdk", "version": "11"},
-          {"dependency": "android_virtual_device", "version": "31"},
+          {"dependency": "android_virtual_device", "version": "31"}
         ]
       tags: >
         ["framework","hostonly"]
