--- a/.ci.yaml
+++ b/.ci.yaml
@@ -3485,20 +3485,14 @@ targets:
       - bin/**
       - .ci.yaml
 
-  - name: Mac native_platform_view_ui_tests_ios
+  - name: Mac_ios native_platform_view_ui_tests_ios
     bringup: true
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
     properties:
-      dependencies: >-
-        [
-          {"dependency": "android_sdk", "version": "version:32v1"},
-          {"dependency": "open_jdk", "version": "11"},
-          {"dependency": "xcode", "version": "13a233"}
-        ]
       tags: >
-        ["devicelab", "hostonly"]
+        ["devicelab", "ios", "mac"]
       task_name: native_platform_view_ui_tests_ios
 
   - name: Mac run_release_test_macos
