--- a/.ci.yaml
+++ b/.ci.yaml
@@ -169,6 +169,14 @@ targets:
       validation: analyze
       validation_name: Analyze
 
+  - name: Linux coverage
+    bringup: true
+    recipe: flutter/coverage
+    timeout: 120
+    properties:
+      tags: >
+        ["framework","hostonly","linux"]
+
   - name: Linux packages_autoroller
     presubmit: false
     recipe: pub_autoroller/pub_autoroller
