--- a/.ci.yaml
+++ b/.ci.yaml
@@ -175,7 +175,7 @@ targets:
     timeout: 120
     properties:
       tags: >
-        ["framework","hostonly","linux"]
+        ["framework", "hostonly", "shard", "linux"]
 
   - name: Linux packages_autoroller
     presubmit: false
