--- a/.ci.yaml
+++ b/.ci.yaml
@@ -370,6 +370,7 @@ targets:
       - .ci.yaml
 
   - name: Linux framework_tests_slow
+    bringup: true
     recipe: flutter/flutter_drone
     timeout: 60
     properties:
