Added dependency on the android sdk for `slow` tests.

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -398,7 +398,9 @@ targets:
     timeout: 60
     properties:
       dependencies: >-
-        [ ]
+        [
+          {"dependency": "android_sdk", "version": "version:33v6"}
+        ]
       shard: framework_tests
       subshard: slow
       tags: >
