--- a/.ci.yaml
+++ b/.ci.yaml
@@ -399,6 +399,15 @@ targets:
     recipe: flutter/flutter_drone
     timeout: 60
     properties:
+      dependencies: >-
+      [
+          {"dependency": "goldctl", "version": "git_revision:3a77d0b12c697a840ca0c7705208e8622dc94603"},
+          {"dependency": "clang", "version": "git_revision:5d5aba78dbbee75508f01bcaa69aedb2ab79065a"},
+          {"dependency": "cmake", "version": "version:3.16.1"},
+          {"dependency": "ninja", "version": "version:1.9.0"},
+          {"dependency": "open_jdk", "version": "version:11"},
+          {"dependency": "android_sdk", "version": "version:33v6"}
+      ]
       shard: framework_tests
       subshard: misc
       tags: >
@@ -2579,6 +2588,14 @@ targets:
     recipe: flutter/flutter_drone
     timeout: 60
     properties:
+      dependencies: >-
+        [
+          {"dependency": "goldctl", "version": "git_revision:3a77d0b12c697a840ca0c7705208e8622dc94603"},
+          {"dependency": "xcode", "version": "14a5294e"},
+          {"dependency": "gems", "version": "v3.3.14"},
+          {"dependency": "open_jdk", "version": "version:11"},
+          {"dependency": "android_sdk", "version": "version:33v6"}
+        ]
       shard: framework_tests
       subshard: misc
       tags: >
@@ -3936,6 +3953,13 @@ targets:
     recipe: flutter/flutter_drone
     timeout: 60
     properties:
+      dependencies: >-
+        [
+          {"dependency": "goldctl", "version": "git_revision:3a77d0b12c697a840ca0c7705208e8622dc94603"},
+          {"dependency": "vs_build", "version": "version:vs2019"},
+          {"dependency": "open_jdk", "version": "version:11"},
+          {"dependency": "android_sdk", "version": "version:33v6"}
+        ]
       shard: framework_tests
       subshard: misc
       tags: >
