Add back bringup:

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2104,6 +2104,7 @@ targets:
       task_name: routing_test
 
   - name: Linux_android spell_check_test
+    bringup: true
     recipe: devicelab/devicelab_drone
     presubmit: false
     timeout: 60
