--- a/.ci.yaml
+++ b/.ci.yaml
@@ -332,6 +332,7 @@ targets:
   - name: Linux firebase_release_smoke_test
     recipe: firebaselab/firebaselab
     timeout: 60
+    bringup: true # https://github.com/flutter/flutter/issues/114183
     properties:
       dependencies: >-
         [
